--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,20 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+<head>
+  
+  <title>{{ page.title }}</title>
+  
+  <meta charset="utf-8">
+  <meta content='width=device-width, initial-scale=1' name='viewport'/>
+
+  <link href="/css/style.css" rel="stylesheet" />
+    
     {% include mathjax.html %}
   </head>
+
   <body>
     {% include nav.html %}
     {{ content }}
   </body>
+  
 </html>
