--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,14 @@
 ---
 layout: default
 ---
+<head>
+    <link href="/css/blog.css" rel="stylesheet" />
+</head>
+<br><br>
+<hr>
 <h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<h3>{{ page.subtitle }}</h3>
+<hr>
+<p>{{ page.date | date_to_string }} </p>
 
 {{ content }}
